# target

./: .gitignore  LICENSE  README.md  pyproject.toml
.aidoc/: INDEX.md
.aidoc/architecture/: system-overview.md
.aidoc/conventions/: e2e-test-plan.md  e2e-testing.md  testing-strategy.md
.aidoc/designs/: correction-graph.md  evaluation-tuning.md  interface-contract.md  performance-plan.md
.aidoc/workflows/: development-plan.md  setup-guide.md
.github/workflows/: ci.yml
docs/: design.md
src/target_search/: __init__.py  cli.py  correct.py  db.py  eval.py  explain.py  ingest.py  lex.py  rank.py  sem.py
tests/: test_cli.py  test_correct.py  test_db.py  test_e2e.py  test_eval.py  test_explain.py  test_ingest.py  test_lex.py  test_rank.py  test_sem.py
tests/eval/: eval_queries.json
tests/fixtures/e2e/: comedy-01.md  comedy-02.md  comedy-03.md  contact-01.md  contact-02.md  contact-03-cjk.md  contact-04-short.md  manifest.json  robotics-01.md  robotics-02-correction.md  robotics-03.md  robotics-04-code.md  space-01.md  space-02.md  space-03-correction.md  space-04.md  space-05-correction.md  space-06-rumor.md
