[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "target-search"
version = "0.1.0"
description = "General-purpose document search and ranking system with hybrid BM25 + semantic retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arturo" },
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
semantic = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
target = "target_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/target_search"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
